--- a/client/pages/trolley/trolley.wxml
+++ b/client/pages/trolley/trolley.wxml
@@ -1,2 +1,24 @@
 <!--pages/trolley/trolley.wxml-->
-<text>pages/trolley/trolley.wxml</text>
+<image class='bg' src='/images/bg.png'></image>
+
+<view wx:if='{{!userInfo}}'>
+  <view class='login-cnt'>
+    <view class='avatar'></view>
+    <view class='user-info'>
+      <view class='user-status'>未登录</view>
+      <view class='user-text'>点击微信登录后方可购物</view>
+    </view>
+  </view>
+
+  <button class="login-btn" open-type="getUserInfo" bindgetuserinfo="onTapLogin">
+  微信登录
+  </button>
+</view>
+
+<view wx:else class='trolley-container'>
+  <image src='/images/trolley.png' class='empty-img'></image>
+  <text class='trolley-empty'>
+    <text class='trolley-empty-item'>购物车是空的</text>
+    <text class='trolley-empty-item'>快添加物品进来吧</text>
+  </text>  
+</view>
