--- a/client/pages/order/order.wxss
+++ b/client/pages/order/order.wxss
@@ -1,1 +1,76 @@
 /* pages/order/order.wxss */
+Page {
+  background: #f8f8ff;
+}
+
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 140rpx;
+  z-index: -1;
+}
+
+.login-cnt {
+  margin: 100rpx 30rpx 40rpx;
+  border-radius: 10rpx;
+  display: flex;
+  align-items: center;
+  background: #fff;
+}
+
+.avatar {
+  width: 80rpx;
+  height: 80rpx;
+  margin: 50rpx 30rpx;
+  border-radius: 50%;
+  background: #F3DC5F;
+}
+.avatar-img {
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+}
+
+.user-status {
+  font-size: 25rpx;
+  line-height: 35rpx;
+  font-weight: bold;
+}
+
+.user-text {
+  font-size: 20rpx;
+  line-height: 24rpx;
+  color: #383838;
+}
+
+.login-btn {
+  background: #F3DC5F;
+  width: 280rpx;
+  height: 90rpx;
+  border-radius: 20rpx;
+  margin: 20rpx auto;
+  text-align: center;
+  line-height: 90rpx;
+  font-weight: bold;
+}
+
+.order-container {
+  margin: 100rpx 30rpx 40rpx;
+  padding:40px;
+  border-radius: 10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+}
+
+.empty-img {
+  width:40px;
+  height:40px;
+}
+.order-empty {
+  font-size: 12px;
+  color: #BFBFC1;
+}
