--- a/client/pages/order/order.wxss
+++ b/client/pages/order/order.wxss
@@ -74,3 +74,71 @@ Page {
   font-size: 12px;
   color: #BFBFC1;
 }
+
+.order-header {
+  display: flex;
+  align-items: center;
+  padding: 26rpx 29rpx 14rpx;
+}
+
+.order-header-img {
+  width: 21rpx;
+  height: 34rpx;
+}
+
+.order-header-text {
+  margin-left: 10rpx;
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: rgba(52, 55, 61, 0.8);
+}
+
+.list-container {
+  margin:10px;
+  background:#fff;
+  border-radius:10px;
+  padding:5px;
+}
+.item-container {
+  display: flex;
+  position: relative;
+}
+
+.item-container + .item-container {
+  border-top: 1px solid #f8f8ff;
+}
+
+.lItem-image {
+  width: 120px;
+  height: 100px;
+  margin: 10px;
+}
+
+.item-info {
+  padding: 10px;
+  width: 100%;
+  position: relative;
+}
+
+.item-name {
+  font-size: 14px;
+}
+
+.item-price {
+  display: block;
+  font-weight: bolder;
+}
+
+.item-count {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.rate {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #F6E15F;
+  color: #69713E;
+}
